@@ -81,6 +81,22 @@ image::ItemParameters.png[ItemUsage on ActionUsage and ActionUsage]
 
 image::FlowConnectionUsageOnItems.png[FlowConnectionUsage on ItemUsages]
 
+- Implement textual import/export of `AcceptActionUsage` such as in the following model:
+
+```
+action a1 {
+    item def S1;
+    item def S2;
+    item def S3;
+    port p1;
+    port p2;
+    port p3;
+    action a1 accept s1 : S1 via p1;
+    action a2 accept S2 via p2;
+    accept S3 via p3;
+}
+```
+
 == Dependency update
 
 == Technical details
